Add the CORS option for GCP API gateway, but the authentication is not enable yet.
